index-scheduler/src/snapshots/lib.rs/document_deletion_and_document_addition/documents.snap
---
source: index-scheduler/src/lib.rs
---
[
  {
    "id": 1,
    "doggo": "jean bob"
  },
  {
    "id": 2,
    "catto": "jorts"
  },
  {
    "id": 3,
    "doggo": "bork"
  }
]
